[gd_scene load_steps=3 format=3 uid="uid://djo7ykvws1gy2"]

[ext_resource type="Theme" uid="uid://bvcwux0exg1y0" path="res://main_theme.tres" id="1_cpkd5"]
[ext_resource type="Script" uid="uid://cv5l8s1x88ssa" path="res://scripts/signs and menus/material_conversion.gd" id="1_x4af0"]

[node name="ConversionUI" type="Control"]
process_mode = 3
layout_mode = 3
anchor_right = 6.145
size_flags_horizontal = 4
theme = ExtResource("1_cpkd5")
script = ExtResource("1_x4af0")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.643137, 0.643137, 0.643137, 1)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = -320.0
offset_top = -232.0
offset_right = 320.0
offset_bottom = 232.0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = -56.0
offset_top = -216.0
offset_right = 53.0
offset_bottom = -167.0
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 19
text = "Conversion
 3 to 1 ratio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RockButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = -152.0
offset_right = 248.0
offset_bottom = -112.0
theme = ExtResource("1_cpkd5")

[node name="RockDecrease" type="Button" parent="RockButtons"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 23
text = "  <  "

[node name="RockNumber" type="Panel" parent="RockButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_cpkd5")

[node name="Number" type="Label" parent="RockButtons/RockNumber"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -19.5
offset_right = 28.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 27
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RockIncrease" type="Button" parent="RockButtons"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 23
text = "  >  "

[node name="PaperButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = -24.0
offset_right = 248.0
offset_bottom = 16.0
theme = ExtResource("1_cpkd5")

[node name="PaperDecrease" type="Button" parent="PaperButtons"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 23
text = "  <  "

[node name="PaperNumber" type="Panel" parent="PaperButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_cpkd5")

[node name="Number" type="Label" parent="PaperButtons/PaperNumber"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -19.5
offset_right = 28.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 27
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PaperIncrease" type="Button" parent="PaperButtons"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 23
text = "  >  "

[node name="MetalButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 104.0
offset_right = 248.0
offset_bottom = 144.0
theme = ExtResource("1_cpkd5")

[node name="MetalDecrease" type="Button" parent="MetalButtons"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 23
text = "  <  "

[node name="MetalNumber" type="Panel" parent="MetalButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_cpkd5")

[node name="Number" type="Label" parent="MetalButtons/MetalNumber"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -19.5
offset_right = 28.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 27
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MetalIncrease" type="Button" parent="MetalButtons"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 23
text = "  >  "

[node name="RockLabels" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = -160.0
offset_right = -88.0
offset_bottom = -94.0
theme = ExtResource("1_cpkd5")

[node name="Material" type="HBoxContainer" parent="RockLabels"]
layout_mode = 2
theme = ExtResource("1_cpkd5")

[node name="Name" type="Label" parent="RockLabels/Material"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 40
text = "ROCKS"

[node name="Number" type="Label" parent="RockLabels/Material"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 25
text = "(0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resource" type="HBoxContainer" parent="RockLabels"]
layout_mode = 2
theme = ExtResource("1_cpkd5")

[node name="Name" type="Label" parent="RockLabels/Resource"]
layout_mode = 2
theme = ExtResource("1_cpkd5")
text = "Requires rock shards"

[node name="Number" type="Label" parent="RockLabels/Resource"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 15
text = "(0)"
horizontal_alignment = 1

[node name="PaperLabels" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = -32.0
offset_right = -74.0
offset_bottom = 34.0
theme = ExtResource("1_cpkd5")

[node name="Material" type="HBoxContainer" parent="PaperLabels"]
layout_mode = 2
theme = ExtResource("1_cpkd5")

[node name="Name" type="Label" parent="PaperLabels/Material"]
layout_mode = 2
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 40
text = "PAPER"

[node name="Number" type="Label" parent="PaperLabels/Material"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 25
text = "(0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resource" type="HBoxContainer" parent="PaperLabels"]
layout_mode = 2
theme = ExtResource("1_cpkd5")

[node name="Name" type="Label" parent="PaperLabels/Resource"]
layout_mode = 2
theme = ExtResource("1_cpkd5")
text = "Requires Pieces of Wood"

[node name="Number" type="Label" parent="PaperLabels/Resource"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 15
text = "(0)"
horizontal_alignment = 1

[node name="MetalLabels" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = 96.0
offset_right = -84.0
offset_bottom = 162.0
theme = ExtResource("1_cpkd5")

[node name="Material" type="HBoxContainer" parent="MetalLabels"]
layout_mode = 2
theme = ExtResource("1_cpkd5")

[node name="Name" type="Label" parent="MetalLabels/Material"]
layout_mode = 2
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 40
text = "Metal"

[node name="Number" type="Label" parent="MetalLabels/Material"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 25
text = "(0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resource" type="HBoxContainer" parent="MetalLabels"]
layout_mode = 2
theme = ExtResource("1_cpkd5")

[node name="Name" type="Label" parent="MetalLabels/Resource"]
layout_mode = 2
theme = ExtResource("1_cpkd5")
text = "Requires rusted scrap"

[node name="Number" type="Label" parent="MetalLabels/Resource"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_cpkd5")
theme_override_font_sizes/font_size = 15
text = "(0)"
horizontal_alignment = 1

[node name="Convert" type="Button" parent="."]
layout_mode = 0
offset_left = -48.0
offset_top = 168.0
offset_right = 14.0
offset_bottom = 191.0
scale = Vector2(1.54431, 1.54431)
theme = ExtResource("1_cpkd5")
text = "Convert"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="RockButtons/RockDecrease" to="." method="_on_rock_decrease_pressed"]
[connection signal="pressed" from="RockButtons/RockIncrease" to="." method="_on_rock_increase_pressed"]
[connection signal="pressed" from="PaperButtons/PaperDecrease" to="." method="_on_paper_decrease_pressed"]
[connection signal="pressed" from="PaperButtons/PaperIncrease" to="." method="_on_paper_increase_pressed"]
[connection signal="pressed" from="MetalButtons/MetalDecrease" to="." method="_on_metal_decrease_pressed"]
[connection signal="pressed" from="MetalButtons/MetalIncrease" to="." method="_on_metal_increase_pressed"]
[connection signal="pressed" from="Convert" to="." method="_on_convert_pressed"]
